# way-to-algorithm

./: .gitignore  CMakeLists.txt  CODE_STANDARDS.txt  CONTRIBUTING.md  Introduction.md  LICENSE  README  README.md  SUMMARY.md  SUMMARY.md.bak  Way-to-Algorithm.css  Way-to-Algorithm.html  book.json  build.bat  build.sh  declaration  declaration.md  foreword  foreword.md  general_head.h  install.bat  install.sh  name  name'  package-lock.json  package.json  read_method  read_method.md
src/: CMakeLists.txt  runtest.sh  test.bat  test.sh
src/.bin/sort/: core
src/AnalyticGeometry/: CMakeLists.txt  Util.cpp  Util.h
src/AnalyticGeometry/ConvexHull/: CMakeLists.txt  GrahamScan.cpp  GrahamScan.h  GrahamScanTest.cpp
src/AnalyticGeometry/Polygon/: CMakeLists.txt  ConvexPolygonArea.cpp  ConvexPolygonArea.h  ConvexPolygonAreaTest.cpp  ConvexPolygonGravityCenter.cpp  ConvexPolygonGravityCenter.h  ConvexPolygonGravityCenterTest.cpp  Cross.cpp  Cross.h  CrossTest.cpp  SegmentIntersection.cpp  SegmentIntersection.h  SegmentIntersectionTest.cpp  Sweeping.cpp  Sweeping.h  SweepingTest.cpp
src/Calculation/: CMakeLists.txt  Exponentiation.cpp  Exponentiation.h  Exponentiation.hpp  ExponentiationTest.cpp  LargeNumber.cpp  LargeNumber.h  LargeNumber.hpp  LargeNumberTest.cpp
src/Chapter-2/: BinarySearch.hpp  BreadthFirstSearch.cpp
src/Chapter-2/res/: BreadthFirstSearch.vsdx
src/Chapter-2/src/: Recursion.cpp
src/Chapter-3/res/: LeftistTree.vsdx  PrefixTree.docx  SuffixTree.docx
src/Chapter-3/src/: LeftistTree.cpp
src/Chapter-6/doc/: LargeNumberCalculation.vsdx
src/Chapter-7/3-Permutation/: Permutation.cpp
src/Chapter-7/doc/: Combination.docx  ~$troduction-CombinatorialMathematics.docx
src/CombinatorialMathematics/: 2_full_permutation.cpp  CMakeLists.txt  Catalan.cpp  Catalan.h  Catalan.hpp  Combination.cpp  Combination.h  Combination.hpp  CombinationTest.cpp  DuplicableCombination.cpp  DuplicableCombination.h  DuplicableCombination.hpp  FullPermutation.cpp  FullPermutation.h  FullPermutation.hpp  FullPermutationTest.cpp  Permutation.cpp  Permutation.hpp  com_local.h  print_status.cpp  test.cpp
src/DataStructure/: 9_red_black_tree.cpp  AVLTree.cpp  AVLTree.h  AVLTree.hpp  AVLTreeTest.cpp  AvlTree.cpp  AvlTree.h  AvlTreeTest.cpp  BinarySearchTree.cpp  BinarySearchTree.h  BinarySearchTreeTest.cpp  CMakeLists.txt  DisjointSet.cpp  DisjointSet.h  DisjointSet.hpp  DisjointSetTest.cpp  FenwickTree.cpp  FenwickTree.h  FenwickTree.hpp  FenwickTreeTest.cpp  LeftistTree.cpp  LeftistTree.h  LeftistTree.hpp  LeftistTreeTest.cpp  PrefixTree.cpp  PrefixTree.h  PrefixTree.hpp  PrefixTreeTest.cpp  RedBlackTree.cpp  RedBlackTree.h  RedBlackTree.hpp  RedBlackTreeTest.cpp  SegmentTree.cpp  SegmentTree.h  SegmentTree.hpp  SegmentTreeTest.cpp  SkipList.cpp  SkipList.h  SkipListTest.cpp  SuffixTree.cpp  (+3 more)
src/DynamicProgramming/: CMakeLists.txt  Util.cpp  Util.h
src/DynamicProgramming/BagDP/: CMakeLists.txt  CompleteBag.cpp  CompleteBag.h  CompleteBagTest.cpp  CompleteKnapsack.cpp  CompleteKnapsack.h  CompleteKnapsackTest.cpp  GroupBag.cpp  GroupBag.h  GroupBagTest.cpp  GroupKnapsack.h  TwoDimensionBag.cpp  TwoDimensionBag.h  TwoDimensionBagTest.cpp  Util.cpp  (+15 more)
src/GameTheory/: 1_bash_game.cpp  3_nim_game.cpp  4_sprague_grundy.cpp  BashGame.cpp  BashGame.h  BashGameTest.cpp  CMakeLists.txt  NimGame.cpp  NimGame.h  NimGameTest.cpp  WythoffGame.cpp  WythoffGame.h  WythoffGameTest.cpp
src/GraphTheory/: CMakeLists.txt  Util.cpp  Util.h  graph.h
src/NumberTheory/: CMakeLists.txt  ChineseRemainerTheorem.cpp  ChineseRemainerTheorem.h  ChineseRemainerTheoremTest.cpp  Euclid.cpp  Euclid.h  EuclidTest.cpp  ExtendedEuclid.cpp  ExtendedEuclid.h  ExtendedEuclidTest.cpp  ModularExponentiation.cpp  ModularExponentiation.h  ModularExponentiationTest.cpp  ModularLinearEquations.cpp  ModularLinearEquations.h  ModularLinearEquationsTest.cpp  PrimeSieve.cpp  PrimeSieve.h  PrimeSieveTest.cpp  Sieve.cpp  Sieve.h  SieveTest.cpp  Util.cpp  Util.h
src/PatternMatch/: AhoCorasickAutomata.cpp  AhoCorasickAutomataTest.cpp  CMakeLists.txt  KnuthMorrisPratt.cpp  SimpleMatch.h  SimpleMatchTest.cpp  Util.h
src/Search/: AStarSearch.cpp  AStarSearch.h  AStarSearch.hpp  AStarSearchTest.cpp  BidirectionalBreadthSearch.cpp  BidirectionalBreadthSearch.h  BidirectionalBreadthSearch.hpp  BidirectionalBreadthSearchTest.cpp  BinarySearch.cpp  BinarySearch.h  BinarySearch.hpp  BinarySearchTest.cpp  BreadthFirstSearch.cpp  BreadthFirstSearch.h  BreadthFirstSearch.hpp  BreadthFirstSearchTest.cpp  BruteForce.cpp  BruteForce.h  BruteForce.hpp  BruteForceTest.cpp  CMakeLists.txt  DancingLink.cpp  DancingLink.h  DancingLink.hpp  DancingLinkTest.cpp  DancingLinks.cpp  DancingLinks.hpp  Recursion.cpp  Recursion.h  Recursion.hpp  RecursionTest.cpp  Util.cpp  Util.h
src/Sort/: AscendUtil.h  BubbleSort.cpp  BubbleSort.h  BubbleSort.hpp  BubbleSortTest.cpp  CMakeLists.txt  InsertSort.cpp  InsertSort.h  InsertSort.hpp  InsertSortTest.cpp  MergeSort.cpp  MergeSort.h  MergeSort.hpp  MergeSortTest.cpp  QuickSort.cpp  QuickSort.h  QuickSort.hpp  QuickSortTest.cpp  Util.cpp  Util.h  bubble_sort.cpp  bubble_sort_test.cpp  insert_sort.cpp  quick_sort.cpp  quick_sort.h  quick_sort_test.cpp
src/TextMatch/: 4_aho_corasick_automation.hpp  ACAutomation.cpp  ACAutomation.h  ACAutomation.hpp  ACAutomationTest.cpp  AcAutomationTest.cpp  AhoCorasickAutomata.cpp  AhoCorasickAutomata.h  AhoCorasickAutomataTest.cpp  CMakeLists.txt  KMPMatch.cpp  KMPMatch.h  KMPMatch.hpp  KMPMatchTest.cpp  KmpMatch.h  KmpMatchTest.cpp  KnuthMorrisPratt.cpp  KnuthMorrisPratt.h  KnuthMorrisPrattTest.cpp  RabinKarp.cpp  RabinKarp.h  RabinKarpTest.cpp  SimpleMatch.cpp  SimpleMatch.h  SimpleMatch.hpp  SimpleMatchTest.cpp  Util.cpp  aho_corasick_automachine.cpp
src/search/: AStarSearch.hpp  BreadthFirstSearch.cpp  BreadthFirstSearch.hpp  CMakeLists.txt  brute_force.cpp  brute_force.h  brute_force_test.cpp
src/sort/: CMakeLists.txt  ascend_util.h  bubble_sort.h  insert_sort.h  insert_sort_test.cpp  merge_sort.cpp  merge_sort.h  merge_sort_test.cpp  quick_sort.cpp  quick_sort_test.cpp
(+1416 files in other folders)
