cmake_minimum_required(VERSION 3.4)
project(Way-to-Algorithm CXX)

add_subdirectory(Sort)
add_subdirectory(Search)
add_subdirectory(DataStructure)
add_subdirectory(DynamicProgramming)
add_subdirectory(GraphTheory)
add_subdirectory(CombinatorialMathematics)
add_subdirectory(Calculation)
add_subdirectory(TextMatch)
