cmake_minimum_required(VERSION 3.4)

project(way-to-algorithm CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(Sort)
add_subdirectory(Search)
add_subdirectory(DataStructure)
add_subdirectory(DynamicProgramming)
add_subdirectory(GameTheory)
add_subdirectory(GraphTheory)
add_subdirectory(NumberTheory)
add_subdirectory(CombinatorialMathematics)
add_subdirectory(AnalyticGeometry)
add_subdirectory(TextMatch)
