cmake_minimum_required(VERSION 3.4)

project(WayToAlgorithm CXX)

add_executable(CombinatorialMathematics-Catalan.exe Catalan.cpp Catalan.hpp)
add_executable(CombinatorialMathematics-Combination.exe Combination.cpp Combination.hpp)
add_executable(CombinatorialMathematics-DuplicableCombination.exe DuplicableCombination.cpp DuplicableCombination.hpp)
add_executable(CombinatorialMathematics-FullPermutation.exe FullPermutation.cpp FullPermutation.hpp)
add_executable(CombinatorialMathematics-Permutation.exe Permutation.cpp Permutation.hpp)
