cmake_minimum_required(VERSION 3.4)

#add_executable(CombinatorialMathematics-Catalan.exe Catalan.cpp Catalan.hpp)
#add_executable(CombinatorialMathematics-Combination.exe Combination.cpp Combination.hpp)
#add_executable(CombinatorialMathematics-DuplicableCombination.exe DuplicableCombination.cpp DuplicableCombination.hpp)
#add_executable(CombinatorialMathematics-FullPermutation.exe FullPermutation.cpp FullPermutation.hpp)
#add_executable(CombinatorialMathematics-UniqueFullPermutation.exe UniqueFullPermutation.cpp UniqueFullPermutation.hpp)
#add_executable(CombinatorialMathematics-Permutation.exe Permutation.cpp Permutation.hpp)
#add_executable(CombinatorialMathematics-PermutationGroup.exe PermutationGroup.cpp PermutationGroup.hpp)
#add_executable(CombinatorialMathematics-Subset.exe Subset.cpp Subset.hpp)
#add_executable(CombinatorialMathematics-UniqueSubset.exe UniqueSubset.cpp UniqueSubset.hpp)
