cmake_minimum_required(VERSION 3.4)

add_executable(sort-bubble_sort.exe bubble_sort.hpp bubble_sort.cpp bubble_sort_test.cpp)
add_executable(sort-insert_sort.exe insert_sort.hpp insert_sort.cpp merge_sort_test.cpp)
add_executable(sort-merge_sort.exe merge_sort.hpp merge_sort.cpp merge_sort_test.cpp)
add_executable(sort-quick_sort.exe quick_sort.hpp quick_sort.cpp quick_sort_test.cpp)
