cmake_minimum_required(VERSION 3.4)

project(WayToAlgorithm CXX)

add_executable(CompleteKnapsack.exe CompleteKnapsack.cpp)
add_executable(GroupKnapsack.exe GroupKnapsack.cpp)
add_executable(TwoDimensionKnapsack.exe TwoDimensionKnapsack.cpp)
add_executable(ZeroOneKnapsack.exe ZeroOneKnapsack.cpp)
add_executable(ZeroOneKnapsackExtension.exe ZeroOneKnapsackExtension.cpp)
