cmake_minimum_required(VERSION 3.4)

project(WayToAlgorithm CXX)

add_executable(DynamicProgramming-LinearDP-BidirectionalIncreasingDecreasingSubsequence.exe BidirectionalIncreasingDecreasingSubsequence.cpp BidirectionalIncreasingDecreasingSubsequence.hpp)
add_executable(DynamicProgramming-LinearDP-LongestCommonSubsequence.exe LongestCommonSubsequence.cpp LongestCommonSubsequence.hpp)
add_executable(DynamicProgramming-LinearDP-LongestIncreasingSubsequence.exe LongestIncreasingSubsequence.cpp LongestIncreasingSubsequence.hpp)
# add_executable(LongestIncreasingSubsequenceExtension.exe LongestIncreasingSubsequenceExtension.cpp)
