cmake_minimum_required(VERSION 3.4)

project(WayToAlgorithm CXX)

add_executable(DynamicProgramming-RegionalDP-MaximumBinaryTreeMerge.exe MaximumBinaryTreeMerge.cpp MaximumBinaryTreeMerge.hpp)
# add_executable(MinimumMergeCost.exe MinimumMergeCost.cpp)
# add_executable(MinimumMergeCostExtension.exe MinimumMergeCostExtension.cpp)
